--- a/draft.bib
+++ b/draft.bib
@@ -120,7 +120,37 @@
     title={Apache Zookeeper}
 }
 
-@online{raft,
-    url={https://raft.github.io/},
-    title={The Raft Consensus Algorithm}
+@inproceedings{raft,
+  title={In search of an understandable consensus algorithm.},
+  author={Ongaro, Diego and Ousterhout, John K},
+  booktitle={USENIX Annual Technical Conference},
+  pages={305--319},
+  year={2014}
+}
+
+@article{state-replication,
+  title={State Machine Replication},
+  author={Santos, Nuno Filipe de Sousa},
+  year={2012},
+  publisher={EPFL}
+}
+
+@article{spanner,
+  title={Spanner: Google’s globally distributed database},
+  author={Corbett, James C and Dean, Jeffrey and Epstein, Michael and Fikes, Andrew and Frost, Christopher and Furman, Jeffrey John and Ghemawat, Sanjay and Gubarev, Andrey and Heiser, Christopher and Hochschild, Peter and others},
+  journal={ACM Transactions on Computer Systems (TOCS)},
+  volume={31},
+  number={3},
+  pages={8},
+  year={2013},
+  publisher={ACM}
+}
+
+@book{postgres,
+  title={The design of Postgres},
+  author={Stonebraker, Michael and Rowe, Lawrence A},
+  volume={15},
+  number={2},
+  year={1986},
+  publisher={ACM}
 }
