--- a/draft.tex
+++ b/draft.tex
@@ -83,54 +83,37 @@
 \DeclareMathOperator{\sgn}{sgn}
 
 \begin{document}
-\begin{comment}
-    \begin{titlepage}
-    \newpage
+\begin{titlepage}
+\begingroup
+  \centering
+  {\scshape
+  \fontsize{12pt}{14pt}\selectfont Министерство образования и науки Российской Федерации\par
+  \vspace{0.7cm}
+  Государственное образовательное учреждение \\высшего профессионального образования\par
+  Московский физико-технический институт\\(государственный университет)\par
+  \vspace{0.7cm}
+  Факультет инноваций и высоких технологий\par
+  Кафедра анализа данных\par
+  \hrulefill\par
+  \vspace{0.7cm}
+  \fontsize{14pt}{17pt}\selectfont выпускная квалификационная работа\par}
+  \fontsize{14pt}{17pt}\selectfont по направлению 03.03.01 «Прикладная математика и информатика»\par
+  \vspace{1cm}
+  {\fontsize{21pt}{25pt}\selectfont\bfseries Онлайн верификация гарантий консистентности в распределённых системах на примере YT
+\par}
+  \vspace{4cm}
+  
+  \begin{tabular}{l@{\hspace{140pt}}r}
+    Студент & Сурин М.С. \\
+    Научный руководитель & Левин М.В. \\
+    Зам. зав. кафедрой д.ф-м.н, проф. & Бунина Е.И.
+  \end{tabular}
+  \par
+  \vfill
 
-    \begin{center}
-    МИНИСТЕРСТВО ОБРАЗОВАНИЯ И НАУКИ РОССИЙСКОЙ ФЕДЕРАЦИИ \\
-    \vspace{0.5cm}
-    ГОСУДАРСТВЕННОЕ ОБРАЗОВАТЕЛЬНОЕ УЧРЕЖДЕНИЕ \\*
-    ВЫСШЕГО ПРОФЕССИОНАЛЬНОГО ОБРАЗОВАНИЯ\\*
-    "МОСКОВСКИЙ ФИЗИКО-ТЕХНИЧЕСКИЙ ИНСТИТУТ \\*
-    (ГОСУДАРСТВЕННЫЙ УНИВЕРСИТЕТ)" \\*
-    \vspace{0.5cm}
-    ФАКУЛЬТЕТ ИННОВАЦИЙ И ВЫСОКИХ ТЕХНОЛОГИЙ \\*
-    КАФЕДРА АНАЛИЗА ДАННЫХ \\*
-    \hrulefill
-    \end{center}
-
-
-    \vspace{8em}
-
-    \begin{center}
-    \Large Выпускная квалификационная работа по направлению 01.03.02 <<Прикладные математика и информатика>> \linebreak НА ТЕМУ:
-    \end{center}
-
-    \vspace{2.5em}
-
-    \begin{center}
-    \textsc{\large{\textbf{TITLE}}}
-    \end{center}
-
-    \vspace{6.5em}
-
-    \begin{flushleft}
-        Студент \hrulefill Сурин М.С.  \\
-    \vspace{1.5em}
-        Научный руководитель к.ф-м.н \hrulefill Артемов А.В.\\
-    \vspace{1.5em}
-    Зам. зав. кафедрой д.ф-м.н, профессор \hrulefill Бунина Е.И.
-    \end{flushleft}
-
-    \vspace{\fill}
-
-    \begin{center}
-    МОСКВА, 2017
-    \end{center}
-
-    \end{titlepage}
-\end{comment}
+  {\fontsize{14pt}{17pt}\selectfont Москва, 2017\par}
+\endgroup
+\end{titlepage}
 
 \tableofcontents
 
